--- a/.docker/docker-compose.humble-dsr.yaml
+++ b/.docker/docker-compose.humble-dsr.yaml
@@ -60,8 +60,8 @@ services:
     volumes:
       # Maps directories from the host to the container
       - "$HOST_SCRIPTS_DIR:$CONTAINER_HOME/scripts"
+      # - "$HOST_WORKSPACE_ROOT:$APP_WORKSPACE_ROOT"
       - "$HOST_HF_HOME:$CONTAINER_HF_HOME"
-      - "$HOST_WORKSPACE_ROOT:$CONTAINER_WORKSPACE_ROOT"
       - "$HOST_CACHE_DIR:$CONTAINER_CACHE_DIR"
       - "$HOST_SSH_DIR:$CONTAINER_SSH_DIR"
       - "$HOST_GH_CONFIG_DIR:$CONTAINER_GH_CONFIG_DIR"
